# hashtag-generator

./: .gitignore  README.md
docs/: index.html  script.js
frontend/: index.html  script.js  style.css
functions/: main.py  pyproject.toml  requirements.txt
